<resources>
    <string name="app_name">韦驮天视频</string>
    <string name="loading">加载中</string>
    <string name="load_failed">加载失败</string>
    <string name="no_more_videos">没有更多视频了</string>
    <string name="no_login">未登录</string>
    <string name="nav_home">我的主页</string>
    <string name="nav_favorites">我的收藏</string>
    <string name="nav_histories">观看历史</string>
    <string name="nav_following">我的关注</string>
    <string name="nav_settings">设置</string>
    <string name="navhelp">帮助</string>
    <string name="nav_upload">我要上传</string>
    <string name="nav_admin">我的后台</string>
    <string name="nav_logout">退出登录</string>
    <string name="btn_upload_video">上传视频</string>
    <string name="btn_upload_cover">上传封面</string>
    <string name="et_title">输入标题</string>
    <string name="et_description">输入视频描述</string>
    <string name="btn_submit">提交</string>
    <string name="menu_upload">上传</string>
    <string name="menu_search">搜索</string>
    <string name="load_complete">加载完成</string>
    <string name="feedback_hit_comment">发送评论</string>

    <string name="to_ollect">收藏</string>
    <string name="cancel_ollect">取消收藏</string>
    <string name="star">关注</string>
    <string name="cancel_star">取消关注</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="btn_login">登录</string>
    <string name="btn_reg">注册</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd2">请输入重复密码</string>
    <string name="input_name">请输入昵称</string>
    <string name="browswer_refresh">刷新</string>
    <string name="browswer_forward">前进</string>
    <string name="to_reg">没有帐号，去注册</string>
</resources>
