<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar_simple" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:counterEnabled="true">
        <!--app:counterMaxLength="11"-->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_people_black_24dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_people_black_24dp"
            android:gravity="center_vertical"
            android:hint="@string/input_username"
            android:inputType="textEmailAddress"
            android:textColor="@color/cardview_dark_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">
        <!--app:counterMaxLength="11"-->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_short_text_black_24dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_short_text_black_24dp"
            android:gravity="center_vertical"
            android:hint="@string/input_name"
            android:inputType="textEmailAddress"
            android:textColor="@color/cardview_dark_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp">
        <!--app:counterMaxLength="11"-->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_black_18dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_email_black_18dp"
            android:gravity="center_vertical"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/cardview_dark_background" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <!--app:passwordToggleEnabled="true"-->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_black_18dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_lock_black_18dp"
            android:gravity="center_vertical"
            android:hint="@string/input_pwd"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapper_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <!--app:passwordToggleEnabled="true"-->

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_black_18dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_lock_black_18dp"
            android:gravity="center_vertical"
            android:hint="@string/input_pwd2"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_reg"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>